# multi-source-rag-chatbot

./: .dockerignore  .env-demo  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
api/backend/: __init__.py  chat_node.py  chatbot_service.py  config.py  file_knowledge.py  knowledge.py  retrieval_node.py
api/routes/: __init__.py  codebase_knowledge.py  file_knowledge.py  history.py  home.py  response.py
interface/: chat.py  chat_history.py  codebase.py  main.py  upload.py
