[project]
name = "multi-source-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "fastapi>=0.124.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-groq>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "langchain-voyageai>=0.3.0",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-postgres>=3.0.1",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.4.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.1",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
]
